k8s-env/k8s-env-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-env
spec:
  selector:
    app: k8s-env
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
